@@ -52,6 +52,7 @@ netdiscovery/netinventory:
 * Fix #481: Add Synology NAS support
 * Fix #480: Add CheckPoint support
 * Fix #488: Update HP Printers support
+* Updated LLDP/CDP connection match checks
 
 collect:
 * Thanks to David Durieux, add support for dynamic pattern in registry key
